# localmodelhq

./: README.md  localmodelhq.db  main.py  pyproject.toml
src/localmodelhq/: config.py  database.py  main.py
src/localmodelhq/routers/: dashboard.py
src/localmodelhq/services/: benchmark.py  compatibility.py  hardware.py  ollama.py
src/localmodelhq/static/: catalog.json
src/localmodelhq/templates/: base.html  dashboard.html
src/localmodelhq/templates/partials/: _hardware.html
